--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   rabbitmq:
     image: rabbitmq:3.12-management
     container_name: file_scanner_rabbitmq
+    hostname: rabbitmq
     ports:
       - "5672:5672"   # AMQP port (for your Python app)
       - "15672:15672" # Management UI port (web interface)
